--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,22 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "jquery": "~2.1.4",
+    "lodash": "~3.9.3",
+    "angular": "1.3.15",
+    "angular-route": "1.3.15",
+    "angular-cookies": "1.3.15",
+    "angular-loader": "1.3.15",
+    "angular-resource": "1.3.15",
+    "angular-sanitize": "1.3.15",
+    "angular-animate": "1.3.15",
+    "angular-mocks": "1.3.15",
+    "angular-i18n": "1.3.15",
+    "angular-touch": "1.3.15",
+    "modernizr": "~2.8.3",
+    "moment": "~2.10.3",
+    "moment-timezone": "~0.4.0"
+  }
 }
