--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/opentable/gcwebclient-libraries/issues"
   },
-  "homepage": "https://github.com/opentable/gcwebclient-libraries"
+  "homepage": "https://github.com/opentable/gcwebclient-libraries",
+  "devDependencies": {
+    "chai": "^3.0.0",
+    "sinon": "^1.14.1",
+    "mocha": "^2.2.5",
+    "gulp": "^3.9.0",
+    "del": "^1.2.0",
+    "coffee-script": "^1.9.3"
+  }
 }
