--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     "test",
     "tests"
   ],
-  "dependencies": {
+  "devDependencies": {
     "jquery": "~2.1.4",
     "lodash": "~3.9.3",
     "angular": "1.3.15",
