--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,7 @@
     "angular-touch": "1.3.15",
     "modernizr": "~2.8.3",
     "moment": "~2.10.3",
-    "moment-timezone": "~0.4.0"
+    "moment-timezone": "~0.4.0",
+    "underscore": "~1.8.3"
   }
 }
