--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,7 @@
     "angular-animate": "1.3.15",
     "angular-mocks": "1.3.15",
     "angular-i18n": "1.3.15",
-    "angular-touch": "1.3.15",
+    "angular-touch": "opentable/bower-angular-touch#fix",
     "modernizr": "~2.8.3",
     "moment": "~2.10.3",
     "moment-timezone": "~0.4.0"
