--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "angular-mocks": "1.3.15",
     "angular-i18n": "1.3.15",
     "angular-touch": "opentable/bower-angular-touch#fix",
+    "angular-messages": "1.3.15",
     "modernizr": "~2.8.3",
     "moment": "~2.10.3",
     "moment-timezone": "~0.4.0"
